src/Home.css
.home{
    min-height: 100vh;
    position: relative;
    color: black;
}

.nav-bar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
    width: 100%;
    background: #ffc000;
    /* background: linear-gradient(90deg, rgba(246,193,1,1) 75%, rgba(236,157,0,1) 85%, rgba(223,141,3,1) 95%, rgba(201,110,18,1) 100%); */
    position: sticky;
    position: -webkit-sticky;
    top: 0px;
}

#nav-bar__title, #nav-bar__about{
    font-weight: 900;
    padding-left: 30px;
    padding-right: 30px;
}

#nav-bar__search-container {
    width: 200px;
    background: white;
    display: flex;
    align-items: center;
    border-radius: 40px;
    padding: 5px;
}

#nav-bar__search {
    font-size: 16px;
    width: 144px;
    background: transparent;
    border: 0;
    outline: none;
    flex: 1;
}

#search__icon {
    margin-right: 5px;
}

#clear__button{
    margin-right: 4px;
}

#clear__button-inactive{
    display:none;
}

.home__content-container{
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 100px);
    padding-bottom: 50px;
}

.home__content-cards{
    margin: auto auto;
    width: 80%;
    text-align: center;
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(250px , 1fr));
}

#footer{
    margin-top: auto;
    height: 50px;
    width: 100%;
    position: absolute;
    bottom: 0;
    background: #ffc000;
    font-size: 16px;
    font-weight: 900;
    text-align: center;
}

